--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.90.1",
+    "axios": "^1.12.2",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "tailwindcss": "^4.1.11"
   },
